2006-03-20  Mikael Hallendal  <micke@imendio.com>

	* Makefile.am:
	* acinclude.m4:
	* configure.in:
	* tests/.cvsignore:
	* tests/Makefile.am:
	* tests/test-objects.[ch]:
	- Started to add support for the Check unit test framework.

2006-03-20  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: Fixes LM-16.
	(_lm_connection_failed_with_error): 
	- Call connection_do_close to remove sources.
	(connection_do_close): Always set the connection state to CLOSED.

2006-01-02  Mikael Hallendal  <micke@imendio.com>

	* MAINTAINERS: Added

2005-08-16  Mikael Hallendal  <micke@imendio.com>

	* NEWS:
	* configure.in:
	- Release 1.0.1

	* loudmouth/lm-connection.c: (connection_free):
	- Unref context if it is set.

2005-08-14  Mikael Hallendal  <micke@imendio.com>

	* NEWS:
	* configure.in:
	- Version 1.0, yiiiha!

2005-08-12  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (_lm_connection_failed_with_error):
	- Set state to LM_CONNECTION_STATE_CLOSED if we failed to connect.
	- Fixes LM-8.

2005-08-12  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c:
	(lm_connection_authenticate_and_block):
	- Set state correctly.
	- Fixes LM-7.
	(lm_connection_send_with_reply_and_block):
	- Check that connection is open before using it.
	- Fixes LM-6.

2005-07-30  Mikael Hallendal  <micke@imendio.com>

	* autogen.sh:
	* configure.in:
	* loudmouth/lm-connection.c: (connection_add_watch):
	- Gtk-doc fixes.

2005-07-09  Martyn Russell  <mr@gnome.org>

	* loudmouth/lm-connection.c (lm_connection_set_ssl): 
	- Error when trying to set up SSL knowing it is not supported.

2005-05-17  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-ssl.c: 
	* loudmouth/lm-connection.c:
	* loudmouth/lm-proxy.c:
	- Fixed some gcc 4.0 warnings.
	* loudmouth/lm-ssl.[ch]: Made the API more consistent.
	* examples/test-lm.c: Fixed some gcc 4.0 warnings.
	
2005-05-13  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-ssl.c: (_lm_ssl_read):